Fix topbar shift on mobile nav opening

--- a/source/assets/stylesheets/_main.scss
+++ b/source/assets/stylesheets/_main.scss
@@ -9,6 +9,13 @@
       }
     }
   }
+  ul.title-area {
+    li.name {
+      h2 {
+        margin-top: 0px;
+      }
+    }
+  }
 }
 
 #logo {
